figured out resume.html bug and edited style.css to include h3 and formatting to remove bad spacing

--- a/style.css
+++ b/style.css
@@ -27,8 +27,14 @@ h2 {
     font-weight: 400;
 }
 
+h3 {
+    font-weight: 550;
+    margin-bottom:0px;
+}
+
 h4 {
     font-weight: 500;
+    margin-bottom:0px;
 }
 
 p {
@@ -55,15 +61,20 @@ a {
     color:black;
 }
 
+ul {
+    margin-top: 0px;
+}
+
 .section {	
     padding-left: 30px;	
     padding-top: 15px;
     word-wrap: break-word;
     width:80vh;
+    padding-bottom:none;
 }
 .row {
     padding-left: 45px;
-    padding-top: 15px;
+    padding-top:none;
     word-wrap: break-word;
     width: 80vh;
 }
